# pysar

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  install.sh  pyproject.toml
docs/: pysar-status.md  speech-profiles.md
docs/superpowers/specs/: 2026-06-22-streaming-dictation-design.md
scripts/: app_launcher.c  install_app.sh  llm_bench.py  make_icon.py  seg_replay.py  start.sh  whisper_server.sh
src/: __init__.py  app.py  config.py  file_transcriber.py  i18n.py  logsetup.py  meetingfilter.py  postprocessor.py  profiles.py  recorder.py  recordings.py  segmenter.py  syscap.py  transcriber.py  transcripts.py
src/backend/: __init__.py  _base.py  _hud.py  _macos.py  _permissions.py  settings_window.py  transcript_window.py
tests/: test_file_transcriber.py  test_meetingfilter.py  test_paste.py  test_permissions.py  test_postprocessor.py  test_profiles.py  test_segmenter.py  test_server.py  test_settings_migration.py  test_settings_window.py  test_streaming.py  test_transcriber.py  test_transcripts.py
